# test-task-tomilov

./: .gitignore  README.md
1/: README.md  db.py  example.env  logger.py  main.py  pyproject.toml  settings.py
1/src/: db.py
2/: README.md  logger.py  main.py  pyproject.toml  settings.py
2/src/: exceptions.py  models.py  rate_limit.py  scraper.py
2/src/tests/: conftest.py  test_limit.py
3/: README.md  example.env  main.py  pyproject.toml  settings.py
3/dockers/clickhouse/: example.env  tables.sql
3/src/: cache.py  db.py  rate_limit.py  scraper.py  use_case.py
4/: README.md  example.env  main.py  pyproject.toml  query.sql  settings.py
4/dockers/clickhouse/: docker-compose.yml  tables.sql
4/src/: db.py
