[project]
name = "task1"
version = "0.1.0"
description = "Test task 1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]

[tool.mypy]
ignore_missing_imports = true
